Revision history for Crypt-Random-Source-Weak-openssl

{{$NEXT}}
          - converted packaging to Dist::Zilla

0.02      2009-11-25
          - switch from Squirrel to Moose.

0.01      2008-06-17
          - Initial release.